# Rust-Bot

./: Cargo.toml  Procfile  README.md
src/: Procfile  main.rs
src/crypto_currencies/: coin_data.rs  coin_struct.rs  mod.rs
