[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = "1.0.144"
url = "2.2.2"

[profile.dev]
opt-level = 3
debug = 0
overflow-checks = false     # Disable integer overflow checks.
